--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
-  "name": "$name$",
-  "version": "$version$",
-  "dependencies": {
-    $END$
-  }
+  "name": "@soulofmischief/flow-types",
+  "description": "A collection of poorly-defined flow types meant for personal use ",
+  "version": "1.1.2",
+  "author": {
+    "name": "soulofmischief",
+    "email": "soulofmischief@protonmail.com",
+    "url": "https://github.com/soulofmischief"
+  },
+  "homepage": "https://github.com/soulofmischief/flow-types",
+  "license": "MIT",
+  "bugs": {},
+  "main": "src",
+  "repository": {},
+  "scripts": {
+    "flow": "npx flow status",
+    "flow:stop": "npx flow stop"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.89.0"
+  },
+  "dependencies": {}
 }
